Adding header and kubernetes links

--- a/samples-logs/src/app/app.component.html
+++ b/samples-logs/src/app/app.component.html
@@ -1,60 +1,1 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Samples logs</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pipeline logs</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Kubernetes</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Sample ID</th>
-            <th scope="col">Date</th>
-            <th scope="col">Import status</th>
-            <th scope="col">Pipeline status</th>
-            <th>Export status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>ERR3482174</td>
-            <td>Apr 20, 2020</td>
-            <td><span class="badge badge-pill badge-success">Success</span></td>
-            <td><span class="badge badge-pill badge-success">Success</span></td>
-            <td><span class="badge badge-pill badge-success">Success</span></td>
-          </tr>
-          <tr>
-            <td>ERR3482177</td>
-            <td>Apr 20, 2020</td>
-            <td><span class="badge badge-pill badge-success">Success</span></td>
-            <td><span class="badge badge-pill badge-warning">Pipeline started</span></td>
-            <td><span class="badge badge-pill badge-info">Undef</span></td>
-          </tr>
-          <tr>
-            <td>ERR3482180</td>
-            <td>Apr 20, 2020</td>
-            <td><span class="badge badge-pill badge-success">Success</span></td>
-            <td><span class="badge badge-pill badge-danger">Failed</span></td>
-            <td><span class="badge badge-pill badge-danger">Failed</span></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
