--- a/samples-logs/src/app/samples/samples.component.html
+++ b/samples-logs/src/app/samples/samples.component.html
@@ -2,6 +2,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      <h1 class="text-center">Jovian</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       <table class="table">
         <thead>
           <tr>
