Adding link to k8s dashboards

--- a/samples-logs/src/app/header/header.component.html
+++ b/samples-logs/src/app/header/header.component.html
@@ -9,7 +9,8 @@
         <a class="nav-link" href="#">Samples logs <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Kubernetes</a>
+        <a class="nav-link"
+           href="http://localhost:8001/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/" target="_blank">Kubernetes</a>
       </li>
     </ul>
   </div>
