--- a/samples-logs/src/app/samples-details/samples-details.component.html
+++ b/samples-logs/src/app/samples-details/samples-details.component.html
@@ -13,7 +13,7 @@
       <h5>Logs:</h5>
       <ul class="list-group">
         <li
-          class="list-group-item d-flex justify-content-between align-items-center"
+          class="list-group-item list-group-item-success d-flex justify-content-between align-items-center"
           *ngFor="let date of sampleData['export_from_ena']['date']; let i=index">
           {{sampleData['export_from_ena']['status'][i]}}
           <span class="badge badge-primary badge-pill">{{date}}</span>
