--- a/samples-logs-front-end/src/app/samples-details/samples-details.component.html
+++ b/samples-logs-front-end/src/app/samples-details/samples-details.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" *ngIf="sampleData">
     <div class="col-md-12">
       <h3>1. ENA import</h3>
       <h5>Logs:</h5>
