--- a/samples-logs-front-end/src/app/samples-details/samples-details.component.html
+++ b/samples-logs-front-end/src/app/samples-details/samples-details.component.html
@@ -10,7 +10,7 @@
   <div class="row" *ngIf="sampleData">
     <div class="col-md-12">
       <h3>1. ENA import</h3>
-      <h5>Logs:</h5>
+      <h5 *ngIf="sampleData['export_from_ena']['status'].length>0">Logs:</h5>
       <ul class="list-group">
         <li
           class="list-group-item list-group-item-success d-flex justify-content-between align-items-center"
@@ -32,7 +32,7 @@
 
   <hr>
 
-  <div class="row">
+  <div class="row" *ngIf="sampleData">
     <div class="col-md-12">
       <h3>2. Pipeline run
         <button type="button" class="btn btn-success">
@@ -41,15 +41,48 @@
             Pipeline report</a>
         </button>
       </h3>
-
+      <h5 *ngIf="sampleData['pipeline_analysis']['status'].length>0">Logs:</h5>
+      <ul class="list-group">
+        <li
+          class="list-group-item list-group-item-success d-flex justify-content-between align-items-center"
+          *ngFor="let date of sampleData['pipeline_analysis']['date']; let i=index">
+          {{sampleData['pipeline_analysis']['status'][i]}}
+          <span class="badge badge-primary badge-pill">{{date}}</span>
+        </li>
+      </ul>
+      <h5 *ngIf="sampleData['pipeline_analysis']['errors'].length>0">Errors:</h5>
+      <ul class="list-group">
+        <li
+          class="list-group-item list-group-item-danger d-flex justify-content-between align-items-center"
+          *ngFor="let error of sampleData['pipeline_analysis']['errors']">
+          {{error}}
+        </li>
+      </ul>
     </div>
   </div>
 
   <hr>
 
-  <div class="row">
+  <div class="row" *ngIf="sampleData">
     <div class="col-md-12">
       <h3>3. ENA export</h3>
+      <h5 *ngIf="sampleData['import_to_ena']['status'].length>0">Logs:</h5>
+      <ul class="list-group">
+        <li
+          class="list-group-item list-group-item-success d-flex justify-content-between align-items-center"
+          *ngFor="let date of sampleData['import_to_ena']['date']; let i=index">
+          {{sampleData['import_to_ena']['status'][i]}}
+          <span class="badge badge-primary badge-pill">{{date}}</span>
+        </li>
+      </ul>
+      <h5 *ngIf="sampleData['import_to_ena']['errors'].length>0">Errors:</h5>
+      <ul class="list-group">
+        <li
+          class="list-group-item list-group-item-danger d-flex justify-content-between align-items-center"
+          *ngFor="let error of sampleData['import_to_ena']['errors']">
+          {{error}}
+        </li>
+      </ul>
     </div>
   </div>
 </div>
