--- a/samples-logs-front-end/src/app/samples-details/samples-details.component.html
+++ b/samples-logs-front-end/src/app/samples-details/samples-details.component.html
@@ -10,20 +10,20 @@
   <div class="row" *ngIf="sampleData">
     <div class="col-md-12">
       <h3>1. ENA import</h3>
-      <h5 *ngIf="sampleData['export_from_ena']['status'].length>0">Logs:</h5>
+      <h5 *ngIf="sampleData['import_from_ena']['status'].length>0">Logs:</h5>
       <ul class="list-group">
         <li
           class="list-group-item list-group-item-success d-flex justify-content-between align-items-center"
-          *ngFor="let date of sampleData['export_from_ena']['date']; let i=index">
-          {{sampleData['export_from_ena']['status'][i]}}
+          *ngFor="let date of sampleData['import_from_ena']['date']; let i=index">
+          {{sampleData['import_from_ena']['status'][i]}}
           <span class="badge badge-primary badge-pill">{{date}}</span>
         </li>
       </ul>
-      <h5 *ngIf="sampleData['export_from_ena']['errors'].length>0">Errors:</h5>
+      <h5 *ngIf="sampleData['import_from_ena']['errors'].length>0">Errors:</h5>
       <ul class="list-group">
         <li
           class="list-group-item list-group-item-danger d-flex justify-content-between align-items-center"
-          *ngFor="let error of sampleData['export_from_ena']['errors']">
+          *ngFor="let error of sampleData['import_from_ena']['errors']">
           {{error}}
         </li>
       </ul>
