--- a/samples-logs-front-end/src/app/samples-details/samples-details.component.html
+++ b/samples-logs-front-end/src/app/samples-details/samples-details.component.html
@@ -61,7 +61,7 @@
   <div class="row" *ngIf="sampleData">
     <div class="col-md-12">
       <h3>3. ENA export</h3>
-      <h5 *ngIf="sampleData['import_to_ena']['status'].length>0">Logs:</h5>
+      <h5 *ngIf="sampleData['export_to_ena']['status'].length>0">Logs:</h5>
       <ul class="list-group">
         <li
           class="list-group-item list-group-item-success d-flex justify-content-between align-items-center"
