--- a/samples-logs-front-end/src/app/samples-details/samples-details.component.html
+++ b/samples-logs-front-end/src/app/samples-details/samples-details.component.html
@@ -32,9 +32,14 @@
 
   <hr>
 
-  <div class="row" *ngIf="sampleData">
+  <div class="row">
     <div class="col-md-12">
       <h3>2. Pipeline run
+        <a href="{{generateLink()}}"
+           class="btn btn-primary btn-lg disabled"
+           role="button"
+           aria-disabled="true"
+           target="_blank">Nextflow Report</a>
       </h3>
       <h5 *ngIf="sampleData['pipeline_analysis']['status'].length>0">Logs:</h5>
       <ul class="list-group">
