--- a/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
+++ b/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
@@ -3,10 +3,10 @@
   <div class="row">
     <div class="col-md-12">
       <h1>
-        <button type="button" class="btn btn-primary active" [routerLink]="['/jovian']">
+        <button type="button" class="btn btn-primary" [routerLink]="['/jovian']">
           Jovian
         </button>
-        <button type="button" class="btn btn-primary" [routerLink]="['/ont']">
+        <button type="button" class="btn btn-primary active" [routerLink]="['/ont']">
           ONT
         </button>
       </h1>
@@ -16,34 +16,34 @@
     <div class="col-md-12">
       <table class="table">
         <thead>
-          <tr>
-            <th>Sample ID</th>
-            <th scope="col">Date</th>
-            <th scope="col">Import status</th>
-            <th scope="col">Pipeline status</th>
-            <th>Export status</th>
-          </tr>
+        <tr>
+          <th>Sample ID</th>
+          <th scope="col">Date</th>
+          <th scope="col">Import status</th>
+          <th scope="col">Pipeline status</th>
+          <th>Export status</th>
+        </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of data | paginate: { itemsPerPage: 10, currentPage: p }">
-            <td><a [routerLink]="item['id']">{{item['id']}}</a></td>
-            <td>{{getDate(item['import_from_ena']['date'][0])}}</td>
-            <td>
+        <tr *ngFor="let item of data | paginate: { itemsPerPage: 10, currentPage: p }">
+          <td><a [routerLink]="item['id']">{{item['id']}}</a></td>
+          <td>{{getDate(item['import_from_ena']['date'][0])}}</td>
+          <td>
               <span [ngClass]="getExportStatusClass(item['import_from_ena']['status'], 'ena_import')">
                 {{getExportStatus(item['import_from_ena']['status'], 'ena_import')}}
               </span>
-            </td>
-            <td>
+          </td>
+          <td>
               <span [ngClass]="getExportStatusClass(item['pipeline_analysis']['status'], 'pipeline_analysis')">
                 {{getExportStatus(item['pipeline_analysis']['status'], 'pipeline_analysis')}}
               </span>
-            </td>
-            <td>
+          </td>
+          <td>
               <span [ngClass]="getExportStatusClass(item['export_to_ena']['status'], 'ena_export')">
                 {{getExportStatus(item['export_to_ena']['status'], 'ena_export')}}
               </span>
-            </td>
-          </tr>
+          </td>
+        </tr>
         </tbody>
       </table>
       <pagination-controls (pageChange)="p = $event"></pagination-controls>
