--- a/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
+++ b/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
@@ -12,6 +12,61 @@
       </h1>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Summary: </h3>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <h5>Import status: </h5>
+      <button type="button" class="btn btn-success btn-sm">
+        Success <span class="badge badge-light">{{summary['ena_import']['Success']}}</span>
+      </button>
+      <button type="button" class="btn btn-warning btn-sm">
+        Processing <span class="badge badge-light">{{summary['ena_import']['Processing']}}</span>
+      </button>
+      <button type="button" class="btn btn-primary btn-sm">
+        Undefined <span class="badge badge-light">{{summary['ena_import']['Undefined']}}</span>
+      </button>
+      <button type="button" class="btn btn-danger btn-sm">
+        Failed <span class="badge badge-light">9</span>
+      </button>
+    </div>
+    <div class="col-md-4">
+      <h5>Pipeline status: </h5>
+      <button type="button" class="btn btn-success btn-sm">
+        Success <span class="badge badge-light">{{summary['pipeline_analysis']['Success']}}</span>
+      </button>
+      <button type="button" class="btn btn-warning btn-sm">
+        Processing <span class="badge badge-light">{{summary['pipeline_analysis']['Processing']}}</span>
+      </button>
+      <button type="button" class="btn btn-primary btn-sm">
+        Undefined <span class="badge badge-light">{{summary['pipeline_analysis']['Undefined']}}</span>
+      </button>
+      <button type="button" class="btn btn-danger btn-sm">
+        Failed <span class="badge badge-light">9</span>
+      </button>
+    </div>
+    <div class="col-md-4">
+      <h5>Export status: </h5>
+      <button type="button" class="btn btn-success btn-sm">
+        Success <span class="badge badge-light">{{summary['ena_export']['Success']}}</span>
+      </button>
+      <button type="button" class="btn btn-warning btn-sm">
+        Processing <span class="badge badge-light">{{summary['ena_export']['Processing']}}</span>
+      </button>
+      <button type="button" class="btn btn-primary btn-sm">
+        Undefined <span class="badge badge-light">{{summary['ena_export']['Undefined']}}</span>
+      </button>
+      <button type="button" class="btn btn-danger btn-sm">
+        Failed <span class="badge badge-light">9</span>
+      </button>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-md-12">
       <table class="table">
