--- a/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
+++ b/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
@@ -13,6 +13,8 @@
     </div>
   </div>
 
+  <hr>
+
   <div class="row">
     <div class="col-md-12">
       <h3>Summary: </h3>
@@ -64,6 +66,14 @@
       <button type="button" class="btn btn-danger btn-sm">
         Failed <span class="badge badge-light">9</span>
       </button>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Runs: </h3>
     </div>
   </div>
 
