--- a/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
+++ b/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
@@ -34,7 +34,7 @@
         Undefined <span class="badge badge-light">{{summary['ena_import']['Undefined']}}</span>
       </button>
       <button type="button" class="btn btn-danger btn-sm">
-        Failed <span class="badge badge-light">9</span>
+        Failed <span class="badge badge-light">{{summary['ena_import']['Failed']}}</span>
       </button>
     </div>
     <div class="col-md-4">
@@ -49,7 +49,7 @@
         Undefined <span class="badge badge-light">{{summary['pipeline_analysis']['Undefined']}}</span>
       </button>
       <button type="button" class="btn btn-danger btn-sm">
-        Failed <span class="badge badge-light">9</span>
+        Failed <span class="badge badge-light">{{summary['pipeline_analysis']['Failed']}}</span>
       </button>
     </div>
     <div class="col-md-4">
@@ -64,7 +64,7 @@
         Undefined <span class="badge badge-light">{{summary['ena_export']['Undefined']}}</span>
       </button>
       <button type="button" class="btn btn-danger btn-sm">
-        Failed <span class="badge badge-light">9</span>
+        Failed <span class="badge badge-light">{{summary['pipeline_analysis']['Failed']}}</span>
       </button>
     </div>
   </div>
