--- a/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
+++ b/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
@@ -64,7 +64,7 @@
         Undefined <span class="badge badge-light">{{summary['ena_export']['Undefined']}}</span>
       </button>
       <button type="button" class="btn btn-danger btn-sm">
-        Failed <span class="badge badge-light">{{summary['pipeline_analysis']['Failed']}}</span>
+        Failed <span class="badge badge-light">{{summary['ena_export']['Failed']}}</span>
       </button>
     </div>
   </div>
