Refactor api calls

--- a/samples-logs-front-end/src/app/samples/samples.component.html
+++ b/samples-logs-front-end/src/app/samples/samples.component.html
@@ -4,7 +4,10 @@
     <div class="col-md-12">
       <h1>
         <button type="button" class="btn btn-primary active" [routerLink]="['/jovian']">
-          Jovian
+          Jovian / Reference
+        </button>
+        <button type="button" class="btn btn-primary active" [routerLink]="['/jovian']">
+          Jovian / Metagenomics
         </button>
         <button type="button" class="btn btn-primary" [routerLink]="['/ont']">
           ONT
