--- a/samples-logs-front-end/src/app/samples/samples.component.html
+++ b/samples-logs-front-end/src/app/samples/samples.component.html
@@ -1,18 +1,23 @@
 <app-header></app-header>
 <div class="container">
-  <div class="row">
+  <div class="row mt-3 mb-3">
     <div class="col-md-12">
-      <h1>
-        <button type="button" class="btn btn-primary active" [routerLink]="['/jovian']">
-          Jovian / Reference
-        </button>
-        <button type="button" class="btn btn-primary active" [routerLink]="['/jovian']">
-          Jovian / Metagenomics
-        </button>
-        <button type="button" class="btn btn-primary" [routerLink]="['/ont']">
+
+        <div class="btn-group mr-3">
+          <button type="button" class="btn btn-primary" [routerLink]="['/jovian']">Jovian</button>
+          <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <div class="dropdown-menu dropdown-menu-left">
+            <a class="dropdown-item disabled" href="#" [routerLink]="['/jovian']">Reference Alignment</a>
+            <a class="dropdown-item disabled" href="#" [routerLink]="['/jovian']">Metagenomics</a>
+          </div>
+        </div>
+
+        <button type="button" class="btn btn-secondary" [routerLink]="['/ont']">
           ONT
         </button>
-      </h1>
+
     </div>
   </div>
   <div class="row">
