Refactor samples navigation

--- a/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
+++ b/samples-logs-front-end/src/app/ont-samples/ont-samples.component.html
@@ -2,14 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1>
-        <button type="button" class="btn btn-primary" [routerLink]="['/jovian']">
-          Jovian
-        </button>
-        <button type="button" class="btn btn-primary active" [routerLink]="['/ont']">
-          ONT
-        </button>
-      </h1>
+      <app-samples-navigation></app-samples-navigation>
     </div>
   </div>
 
