--- a/samples-logs-front-end/src/app/ont-samples-filters/ont-samples-filters.component.html
+++ b/samples-logs-front-end/src/app/ont-samples-filters/ont-samples-filters.component.html
@@ -9,7 +9,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <table class="table">
+      <table class="table table-hover">
         <thead>
         <tr>
           <th>Sample ID</th>
