--- a/samples-logs-front-end/src/app/samples/samples.component.html
+++ b/samples-logs-front-end/src/app/samples/samples.component.html
@@ -1,28 +1,9 @@
 <app-header></app-header>
 <div class="container">
-  <div class="row mt-3 mb-3">
-    <div class="col-md-12">
-
-        <div class="btn-group mr-3">
-          <button type="button" class="btn btn-primary" [routerLink]="['/jovian']">Jovian</button>
-          <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <div class="dropdown-menu dropdown-menu-left">
-            <a class="dropdown-item disabled" href="#" [routerLink]="['/jovian']">Reference Alignment</a>
-            <a class="dropdown-item disabled" href="#" [routerLink]="['/jovian']">Metagenomics</a>
-          </div>
-        </div>
-
-        <button type="button" class="btn btn-secondary" [routerLink]="['/ont']">
-          ONT
-        </button>
-
-    </div>
-  </div>
+  <app-samples-navigation></app-samples-navigation>
   <div class="row">
     <div class="col-md-12">
-      <table class="table">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>Sample ID</th>
