--- a/samples-logs-front-end/src/app/components/sample-table/sample-table/sample-table.component.html
+++ b/samples-logs-front-end/src/app/components/sample-table/sample-table/sample-table.component.html
@@ -1,5 +1,9 @@
-<table class="table">
-  <caption>{{ data.length }} {{ data.length > 1 ? 'samples' : 'sample'}} total</caption>
+<table class="table border">
+  <caption [ngPlural]="sampleCount()">
+    <ng-template ngPluralCase='one'>1 sample total</ng-template>
+    <ng-template ngPluralCase='other'>{{ sampleCount() }} samples total</ng-template>
+  </caption>
+  
   <thead class="thead-light">
   <tr>
       <th class="border">Sample ID</th>
@@ -11,7 +15,7 @@
   </thead>
   <tbody>
 
-  <tr *ngFor="let item of data | paginate: { itemsPerPage: 10, currentPage: p }">
+  <tr *ngFor="let item of data | paginate: { itemsPerPage: 10, currentPage: page }">
     <td><a [routerLink]="item?.id">{{ item?.id }}</a></td>
     <td>{{ item?.date }}</td>
     <td>
@@ -25,9 +29,9 @@
     </td>
   </tr>
 
-  <tr *ngIf="data.length === 0">
+  <tr *ngIf="data?.length === 0">
     <td class="text-center" colspan="5">
-      <div class="alert alert-info py-3 my-3 mx-4">
+      <div class="alert alert-secondary py-3 my-3 mx-4">
         There are no samples to display yet.
       </div>
     </td>
@@ -35,4 +39,4 @@
 
   </tbody>
 </table>
-<pagination-controls (pageChange)="p = $event"></pagination-controls>
+<pagination-controls (pageChange)="page = $event"></pagination-controls>
