--- a/samples-logs-front-end/src/app/pages/samples/samples.component.html
+++ b/samples-logs-front-end/src/app/pages/samples/samples.component.html
@@ -12,7 +12,7 @@
 
       <div class="row">
         <div class="col-md-12 border-bottom">
-          <h3>Jovian</h3>
+          <h3>{{ pipeline | titlecase }} Runs</h3>
         </div>
       </div>
 
@@ -22,7 +22,7 @@
 
       <div class="row">
         <div class="col-md-12 table-responsive">
-          <app-sample-table [data]="data"></app-sample-table>
+          <app-sample-table [data]="data" [filters]="filters"></app-sample-table>
         </div>
       </div>
   </div>
