--- a/samples-logs-front-end/src/app/pages/samples/samples.component.html
+++ b/samples-logs-front-end/src/app/pages/samples/samples.component.html
@@ -12,7 +12,7 @@
 
       <div class="row">
         <div class="col-md-12 border-bottom">
-          <h3>{{ pipeline | titlecase }} Runs</h3>
+          <h3>{{ pipeline | titlecase }} Runs </h3>
         </div>
       </div>
 
@@ -28,4 +28,7 @@
   </div>
 
   </div>
+
+  <app-footer></app-footer>
+
 </div>
