Remove unused components and tidy samples details page

--- a/samples-logs-front-end/src/app/pages/samples-details/samples-details.component.html
+++ b/samples-logs-front-end/src/app/pages/samples-details/samples-details.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="content-container card shadow-sm px-4 py-4 mt-3">
-      <h2>Pipeline</h2>
+      <h2>Pipeline ({{ pipeline }})</h2>
 
       <app-log-list
         [title]="'Logs'"
