--- a/samples-logs-front-end/src/app/components/footer/footer.component.html
+++ b/samples-logs-front-end/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-white">
+<footer class="footer bg-white w-100 py-4 position-aboslute fixed-bottom">
     <div class="container">
         <ng-container *ngIf="environment.production === false">
             <span class="text-muted">Environment: </span>
