Fully parameterise filtered samples view

--- a/samples-logs-front-end/src/app/components/navigation/navigation.component.html
+++ b/samples-logs-front-end/src/app/components/navigation/navigation.component.html
@@ -12,7 +12,7 @@
           </button>
           <div class="dropdown-menu dropdown-menu-left">
             <button class="dropdown-item" href="#" [routerLink]="['/jovian']">Reference Alignment</button>
-            <button class="dropdown-item disabled" href="#" [routerLink]="['/jovian']" [routerLinkActive]="'active'">Metagenomics</button>
+            <button class="dropdown-item" href="#" [routerLink]="['/jovian-metagenomics']">Metagenomics</button>
           </div>
         </div>
 
