--- a/samples-logs-front-end/src/app/pages/samples/samples.component.html
+++ b/samples-logs-front-end/src/app/pages/samples/samples.component.html
@@ -22,7 +22,7 @@
 
       <div class="row">
         <div class="col-md-12 table-responsive">
-          <app-sample-table [data]="data" [filters]="filters"></app-sample-table>
+          <app-sample-table [pipeline]="pipeline" [data]="data" [filters]="filters"></app-sample-table>
         </div>
       </div>
   </div>
